[NewFeat][Q4] Add new /Log API
